--- a/Cargo.toml
+++ b/Cargo.toml
@@ -5,6 +5,8 @@ edition = "2021"
 
 [dependencies]
 axum = { version = "0.8.0-rc.1", features = ["http2", "macros"] }
+minijinja = "2.5.0"
+serde = { version = "1.0.217", features = ["derive"] }
 sqlx = { version = "0.8.2", features = ["runtime-tokio", "sqlite", "macros", "migrate"] }
 tokio = { version = "1.42.0", features = ["full"] }
 
