Modify upload thingy

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -4,8 +4,8 @@ version = "0.0.0"
 edition = "2021"
 
 [dependencies]
-axum = { version = "0.8", features = ["http2", "macros"] }
-futures = "0.3.31"
+axum = { version = "0.8", features = ["http2", "macros", "multipart"] }
+futures = "0.3"
 minijinja = "2.5"
 serde = { version = "1.0", features = ["derive"] }
 sqlx = { version = "0.8", features = ["runtime-tokio", "sqlite", "macros", "migrate"] }
