--- a/Cargo.toml
+++ b/Cargo.toml
@@ -7,6 +7,7 @@ edition = "2021"
 axum = { version = "0.8", features = ["http2", "macros", "multipart"] }
 futures = "0.3"
 minijinja = "2.5"
+rand = "0.8.5"
 serde = { version = "1.0", features = ["derive"] }
 sqlx = { version = "0.8", features = ["runtime-tokio", "sqlite", "macros", "migrate"] }
 tokio = { version = "1.42", features = ["full"] }
