--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,16 +1,7 @@
-[package]
-name = "reamio"
-version = "0.0.0"
-edition = "2021"
-
-[dependencies]
-axum = { version = "0.8", features = ["http2", "macros", "multipart"] }
-futures = "0.3"
-minijinja = "2.5"
-rand = "0.8.5"
-serde = { version = "1.0", features = ["derive"] }
-sqlx = { version = "0.8", features = ["runtime-tokio", "sqlite", "macros", "migrate"] }
-tokio = { version = "1.42", features = ["full"] }
+[workspace]
+edition = "2024"
+resolver = "3"
+members = ["server", "ui"]
 
 # https://github.com/launchbadge/sqlx#compile-time-verification
 [profile.dev.package.sqlx-macros]
