--- a/ui/Cargo.toml
+++ b/ui/Cargo.toml
@@ -5,6 +5,7 @@ edition = "2024"
 
 [dependencies]
 slint = "1.11"
+ureq = { version = "3.0.11", features = ["brotli", "json"] }
 
 [build-dependencies]
 slint-build = "1.11"
