Lots of writing

--- a/ui/Cargo.toml
+++ b/ui/Cargo.toml
@@ -4,6 +4,7 @@ version = "0.0.0"
 edition = "2024"
 
 [dependencies]
+serde = { version = "1.0.219", features = ["derive"] }
 slint = "1.11"
 ureq = { version = "3.0.11", features = ["brotli", "json"] }
 
