Refactor upload, simplification
TL;DR
- Enable WAL on sqlite
- Remove the fallback to html, we're not using it anymore
- Change the upload endpoint to only allow one file at a time
- Change the upload processing subtask to be serial when processing
files
	- This was due to `begin_with` lifetime issues
- Extract the userdb tag processing into it's own function
- Use `begin_with` and `commit` instead of `transaction`

--- a/server/Cargo.toml
+++ b/server/Cargo.toml
@@ -4,10 +4,11 @@ version = "0.0.0"
 edition = "2024"
 
 [dependencies]
-axum = { version = "0.8", features = ["http2", "macros", "multipart"] }
+axum = { version = "0.8", features = ["http2", "macros" ] }
+bytes = { version = "1.10", features = ["serde"] }
 futures = "0.3"
 rand = "0.8"
 serde = { version = "1.0", features = ["derive"] }
 sqlx = { version = "0.8", features = ["runtime-tokio", "sqlite", "macros", "migrate"] }
-tokio = { version = "1.42", features = ["full"] }
-tower-http = { version = "0.6.4", features = ["fs"] }
+tokio = { version = "1.45", features = ["full"] }
+tower-http = { version = "0.6", features = ["fs"] }
