Update rust, add basic tag parsing

--- a/devenv.yaml
+++ b/devenv.yaml
@@ -6,3 +6,8 @@ inputs:
         follows: nixpkgs
   nixpkgs:
     url: github:nixos/nixpkgs/nixos-unstable
+  rust-overlay:
+    url: github:oxalica/rust-overlay
+    inputs:
+      nixpkgs:
+        follows: nixpkgs
