--- a/ui/Cargo.toml
+++ b/ui/Cargo.toml
@@ -5,6 +5,8 @@ edition = "2024"
 
 [dependencies]
 log = { version = "0.4.27", features = ["std"] }
+num-traits = "0.2.19"
+pulseaudio = "0.3.0"
 rfd = "0.15" 
 serde = { version = "1.0", features = ["derive"] }
 slint = "1.11"
